--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,17 +1,23 @@
 {
+  "canivore names": [
+    "rio",
+    "rio"
+  ],
   "counts per rotation": 1.0,
+  "encoder canivore name": "rio",
   "encoder type": "Encoder Port",
   "encoding": false,
   "gearing denominator": 1.0,
   "gearing numerator": 144.0,
   "gyro": "Analog Gyro",
+  "gyro canivore name": "rio",
   "gyro ctor": "0",
   "is drivetrain": false,
   "motor controllers": [
     "SPARK MAX (Brushless)",
     "SPARK MAX (Brushless)"
   ],
-  "number of samples per average": 1,
+  "number of samples per average": 8,
   "primary encoder inverted": false,
   "primary encoder ports": [
     0,
@@ -38,5 +44,5 @@
     false,
     false
   ],
-  "velocity measurement period": 100
+  "velocity measurement period": 5
 }
